1.3.72 (Build 2024120700)
- added support for Moodle Mobile app

1.3.71 (Build 2024111203)
- added a language chooser for students to select their preferred (native) language - this only works if words were added with word wizard
- added a push page to push settings from one WordCards activities to others with same name, or in same course, or site wide.

1.3.70 (Build 2024111200)
- added completion option for all words learned and completion fixes
- added word learned event
- added option to use the model sentence on speechcards instead of the term/word
- added a language chooser for students to select their preferred (native) language - this only works if words were added with word wizard
- added a push page to mush settings from one WordCards activities to others with same name, in same course, or site wide.

1.3.69 (Build 2024101501)
- Fix for code warning about session_mode

1.3.68 (Build 2024101500)
- Added ability to set the practice types available in free mode
- Added foundations of new "sessions" mode - not yet Enabled
- Improvements to Privacy API implementation

1.3.67 (Build 2024100700)
- Fixes for PHP 8.2 and 8.3

1.3.66 (Build 2024092500)
- Added support for Vietnamese

1.3.65 (Build 2024082600)
- Fix for layout(display of introduction) issue on Adaptable theme

1.3.64 (Build 2024071000)
- fixed wrong trim function
- added a bit more robustness to prevent superclickers from breaking the audio recorder
- fixed wrong dialect labels for Arabic voices:  Arabic (modern standard) / Arabic (gulf)
- made review pool only use current language terms

1.3.63 (Build 2024052600)
- Fixed broken wordwizard (from last release)

1.3.62 (Build 2024051600)
- Fixes for external APIS calls in pre M40

1.3.61 (Build 2024051200)
- Tweaks to format functions for PHP8.2
- Changes to way external apis are called

1.3.60 (Build 2024042700)
- Added missing lang string for export capability
- Fixed incorrect param for activity page (state instead of nextstep)